# tcc-data-challenge

./: .gitignore  Dockerfile  Makefile  Readme.md  docker-compose.yml
data/: shops.csv
data-integration/: main.py  pyproject.toml
data-integration/config/: config.json  config_prod.json
data-integration/jobs/raw_customers/: __init__.py  query.sql  schema.sql
data-integration/jobs/raw_order_positions/: __init__.py  query.sql  schema.sql
data-integration/jobs/raw_orders/: __init__.py  query.sql  schema.sql
data-integration/jobs/raw_products/: __init__.py  query.sql  schema.sql
data-integration/jobs/raw_shops/: __init__.py  query.sql  schema.sql
data-integration/jobs/sta_customers/: __init__.py  query.sql  schema.sql
data-integration/jobs/sta_order_positions/: __init__.py  query.sql  schema.sql
data-integration/jobs/sta_orders/: __init__.py  query.sql  schema.sql
data-integration/jobs/sta_products/: __init__.py  query.sql  schema.sql
data-integration/jobs/sta_shops/: __init__.py  query.sql  schema.sql
data-integration/jobs/stg_fact_order_positions/: __init__.py  query.sql  schema.sql
data-integration/jobs/stg_fact_orders/: __init__.py  query.sql  schema.sql
data-integration/jobs/stg_time/: __init__.py  query.sql  schema.sql
data-integration/lib/: db_utils.py  etl.py  utils.py
database/: dwh_create_db.sql  src_create_tables.sql
notebook/: data_analysis.ipynb
